# OpenDriveViewer

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  SECURITY.md  build.bat  build_mac.sh  readme_cn.md  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bazel/: BUILD.bazel  geoviewer.bzl  moc_wrapper.py  proj_config.bzl  qt.bzl  qt_config.bzl  qt_tool_wrapper.py  repositories.bzl  tcmalloc_config.bzl  update_translations.sh
cmake/: mac_build_cmake.sh  patch_libopendrive.cmake  windows_build_cmake.bat
data/: test2.xodr
scripts/deploy/: package_linux.sh  package_macos.sh  package_windows.ps1
src/: BUILD.bazel  CMakeLists.txt  geo_viewer_export.h
src/app/: BUILD.bazel  CMakeLists.txt  async_map_loader.cpp  async_map_loader.h  camera_controller.cpp  camera_controller.h  coordinate_points_widget.cpp  coordinate_points_widget.h  favorites_widget.cpp  favorites_widget.h  floating_panel_widget.cpp  floating_panel_widget.h  geo_viewer.cpp  geo_viewer.h  geo_viewer_scene.cpp  highlight_manager.cpp  highlight_manager.h  layer_control_widget.cpp  layer_control_widget.h  layer_tree_model.cpp  layer_tree_model.h  loading_progress_widget.cpp  loading_progress_widget.h  main.cpp  main_window.cpp  main_window.h  measure_tool_controller.cpp  measure_tool_controller.h  open_scenario_parser.cpp  open_scenario_parser.h  open_scenario_widget.cpp  open_scenario_widget.h  routing_buffer_manager.cpp  routing_buffer_manager.h  routing_widget.cpp  routing_widget.h  scene_geometry_types.h  scene_index_builder.cpp  scene_index_builder.h  spatial_grid_index.cpp  (+1 more)
src/app/resources/: app.manifest  app.rc
src/core/: BUILD.bazel  CMakeLists.txt  app_settings.h  coordinate_mode_policy.h  coordinate_util.cpp  coordinate_util.h  core_export.h  crash_handler.cpp  crash_handler.h  junction_grouping.cpp  junction_grouping.h  map_loader.cpp  map_loader.h  project_context.cpp  project_context.h  scene_enums.cpp  scene_enums.h  scene_geometry_types.h  settings_persistence.cpp  settings_persistence.h  thread_pool.cpp  thread_pool.h  viewer_text_util.cpp  viewer_text_util.h
src/logic/: BUILD.bazel  CMakeLists.txt  camera_controller.cpp  camera_controller.h  favorites_store.cpp  favorites_store.h  highlight_manager.cpp  highlight_manager.h  input_parsing.cpp  input_parsing.h  logic_export.h  measure_tool_controller.cpp  measure_tool_controller.h  open_scenario_parser.cpp  routing_buffer_manager.cpp  routing_buffer_manager.h  routing_logic.cpp  routing_logic.h  scene_index_builder.cpp  scene_index_builder.h  scene_manager.cpp  scene_manager.h  spatial_grid_index.cpp  spatial_grid_index.h  spatial_index.cpp  spatial_index.h
src/renderer/: scene_renderer.cpp
src/ui/: BUILD  BUILD.bazel  CMakeLists.txt  main_window.cpp  main_window.h
src/ui/render/: BUILD.bazel  CMakeLists.txt  gl_renderer.cpp  gl_renderer.h  render_export.h
src/ui/renderer/: BUILD.bazel  CMakeLists.txt  scene_renderer.cpp  scene_renderer.h
src/ui/widgets/: BUILD  CMakeLists.txt  async_map_loader.cpp  async_map_loader.h  coordinate_points_widget.cpp  coordinate_points_widget.h  favorites_widget.cpp  favorites_widget.h  floating_panel_widget.cpp  floating_panel_widget.h  geo_viewer.cpp  geo_viewer.h  geo_viewer_context_menu.cpp  geo_viewer_highlight.cpp  geo_viewer_inspection.cpp  geo_viewer_interaction.cpp  geo_viewer_navigation.cpp  geo_viewer_overlay.cpp  geo_viewer_scene.cpp  geo_viewer_widget.cpp  geo_viewer_widget.h  layer_control_widget.cpp  layer_control_widget.h  layer_tree_model.cpp  layer_tree_model.h  loading_progress_widget.cpp  loading_progress_widget.h  open_scenario_widget.cpp  open_scenario_widget.h  routing_widget.cpp  routing_widget.h  widgets_export.h
src/utility/: BUILD.bazel  CMakeLists.txt  coordinate_mode_policy.h  coordinate_util.cpp  coordinate_util.h  favorites_store.cpp  favorites_store.h  input_parsing.cpp  input_parsing.h  junction_grouping.cpp  layer_tree_model.cpp  layer_tree_model.h  map_loader.cpp  map_loader.h  open_scenario_parser.cpp  open_scenario_parser.h  routing_logic.cpp  routing_logic.h  scene_enums.h  thread_pool.cpp  viewer_text_util.cpp  viewer_text_util.h
tests/: BUILD.bazel  camera_controller_test.cpp  coordinate_mode_policy_test.cpp  crash_handler_test.cpp  favorites_store_test.cpp  input_parsing_test.cpp  junction_grouping_test.cpp  layer_tree_model_test.cpp  measure_tool_controller_test.cpp  project_context_test.cpp  routing_logic_test.cpp  scene_index_builder_test.cpp  settings_persistence_test.cpp  spatial_grid_index_test.cpp  spatial_index_test.cpp  viewer_text_util_test.cpp
translations/: BUILD.bazel  gen_qrc.py  geoviewer_en_US.ts  geoviewer_zh_CN.ts
