module(
    name = "geoviewer",
    version = "0.1.0",
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "googletest", version = "1.15.2")

# -- Qt6 configuration --
# Module list is the single source of truth for Qt dependencies.
qt6_config = use_repo_rule("//bazel:qt_config.bzl", "qt6_config")

qt6_config(
    name = "qt6_config",
    modules = [
        "QtCore",
        "QtGui",
        "QtOpenGL",
        "QtOpenGLWidgets",
        "QtWidgets",
    ],
)

# -- PROJ configuration --
proj_config = use_repo_rule("//bazel:proj_config.bzl", "proj_config")

proj_config(name = "proj_config")
