load("//bazel:qt.bzl", "qt_lrelease", "qt_resource")

package(default_visibility = ["//visibility:public"])

exports_files([
    "geoviewer_zh_CN.ts",
    "geoviewer_en_US.ts",
])

# Generate .qm files
qt_lrelease(
    name = "qm_outputs",
    ts_files = [
        "geoviewer_zh_CN.ts",
        "geoviewer_en_US.ts",
    ],
)

# Generate .qrc file referencing just the filenames
genrule(
    name = "gen_translations_qrc",
    srcs = [":qm_outputs"],
    outs = ["translations_gen.qrc"],
    cmd = """
echo '<!DOCTYPE RCC><RCC version="1.0">' > $@
echo '<qresource prefix="/i18n">' >> $@
for f in $(locations :qm_outputs); do
    echo "    <file>$$(basename $$f)</file>" >> $@
done
echo '</qresource>' >> $@
echo '</RCC>' >> $@
""",
)

# Bundle generated .qrc into resource wrapper
qt_resource(
    name = "qrc_translations",
    qrc_file = ":gen_translations_qrc",
    deps = [":qm_outputs"],
)
