load("@rules_python//python:py_binary.bzl", "py_binary")
load("//bazel:qt.bzl", "qt_lrelease", "qt_resource")

package(default_visibility = ["//visibility:public"])

exports_files([
    "geoviewer_zh_CN.ts",
    "geoviewer_en_US.ts",
])

# Generate .qm files
qt_lrelease(
    name = "qm_outputs",
    ts_files = [
        "geoviewer_zh_CN.ts",
        "geoviewer_en_US.ts",
    ],
)

py_binary(
    name = "gen_qrc_bin",
    srcs = ["gen_qrc.py"],
    main = "gen_qrc.py",
)

# Generate .qrc file referencing just the filenames
genrule(
    name = "gen_translations_qrc",
    srcs = [":qm_outputs"],
    outs = ["translations_gen.qrc"],
    tools = [":gen_qrc_bin"],
    cmd = "$(location :gen_qrc_bin) --output $@ $(locations :qm_outputs)",
)

# Bundle generated .qrc into resource wrapper
qt_resource(
    name = "OpenDriveViewer_translations",
    qrc_file = ":gen_translations_qrc",
    deps = [":qm_outputs"],
)
