load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//bazel:qt.bzl", "QT_COPTS")

cc_binary(
    name = "OpenDriveViewer",
    srcs = ["main.cpp"],
    copts = QT_COPTS,
    deps = [
        "//bazel:qt6",
        "//src/ui:main_window",
        "//src/ui/widgets",
    ],
    linkopts = select({
        "@platforms//os:windows": [
            "/SUBSYSTEM:WINDOWS",
            "/ENTRY:mainCRTStartup",
        ],
        "//conditions:default": [],
    }),
)
