load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//bazel:qt.bzl", "QT_COPTS")

cc_binary(
    name = "OpenDriveViewer",
    srcs = ["main.cpp"] + select({
        "@platforms//os:windows": [
            "resources/app.rc",
            "resources/app.ico",
        ],
        "//conditions:default": [],
    }),
    copts = QT_COPTS,
    linkopts = select({
        "@platforms//os:windows": [
            "/SUBSYSTEM:WINDOWS",
            "/ENTRY:mainCRTStartup",
            # Pass the manifest to the linker
            "/MANIFEST:EMBED",
            "/MANIFESTINPUT:$(location resources/app.manifest)",
        ],
        "//conditions:default": [],
    }),
    additional_linker_inputs = select({
        "@platforms//os:windows": ["resources/app.manifest"],
        "//conditions:default": [],
    }),
    deps = [
        "//bazel:qt6",
        "//src/core",
        "//src/ui:main_window",
        "//src/ui/widgets",
    ] + select({
        "@platforms//os:macos": [],
        "//conditions:default": ["//bazel:tcmalloc"],
    }),
)
