load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("//bazel:qt.bzl", "QT_COPTS")

cc_library(
    name = "OpenDriveViewer_resources",
    srcs = select({
        "@platforms//os:windows": ["resources/app.rc"],
        "//conditions:default": [],
    }),
)

cc_binary(
    name = "OpenDriveViewer",
    srcs = ["main.cpp"],
    additional_linker_inputs = select({
        "@platforms//os:windows": ["resources/app.manifest"],
        "//conditions:default": [],
    }),
    copts = QT_COPTS,
    linkopts = select({
        "@platforms//os:windows": [
            "/SUBSYSTEM:WINDOWS",
            "/ENTRY:mainCRTStartup",
            "/MANIFEST:EMBED",
            "/MANIFESTINPUT:$(location resources/app.manifest)",
        ],
        "//conditions:default": [],
    }),
    deps = [
        ":OpenDriveViewer_resources",
        "//bazel:qt6",
        "//src/core",
        "//src/ui:main_window",
        "//src/ui/widgets",
    ] + select({
        "@platforms//os:macos": [],
        "//conditions:default": ["//bazel:tcmalloc"],
    }),
)
