load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:qt.bzl", "QT_COPTS")

cc_library(
    name = "core",
    srcs = [
        "coordinate_util.cpp",
        "crash_handler.cpp",
        "junction_grouping.cpp",
        "map_loader.cpp",
        "project_context.cpp",
        "thread_pool.cpp",
        "viewer_text_util.cpp",
    ],
    hdrs = [
        "coordinate_mode_policy.h",
        "coordinate_util.h",
        "crash_handler.h",
        "junction_grouping.h",
        "map_loader.h",
        "project_context.h",
        "scene_enums.h",
        "scene_geometry_types.h",
        "thread_pool.h",
        "viewer_text_util.h",
    ],
    copts = QT_COPTS,
    local_defines = select({
        "@platforms//os:windows": ["GEOVIEWER_BUILD_LIB"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//src:export_header",
        "//bazel:qt6",
        "//bazel:proj",
        "//third_party/libOpenDRIVE:opendrive",
    ],
)
