load("//bazel:geoviewer.bzl", "geoviewer_cc_library")

geoviewer_cc_library(
    name = "render",
    srcs = ["gl_renderer.cpp"],
    hdrs = [
        "gl_renderer.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//bazel:qt6",
        "//src/core",
        "//src/logic",
    ],
    linkopts = select({
        "@platforms//os:windows": ["-DEFAULTLIB:opengl32.lib"],
        "//conditions:default": [],
    }),
)
