load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:qt.bzl", "QT_COPTS")

cc_library(
    name = "render",
    srcs = ["gl_renderer.cpp"],
    hdrs = [
        "gl_renderer.h",
    ],
    copts = QT_COPTS,
    linkopts = select({
        "@platforms//os:windows": ["-DEFAULTLIB:opengl32.lib"],
        "//conditions:default": [],
    }),
    local_defines = select({
        "@platforms//os:windows": ["GEOVIEWER_BUILD_LIB"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//bazel:qt6",
        "//src:export_header",
        "//src/core",
        "//src/logic",
    ],
)
